# services-kafka

./: .gitlab-ci.yml  README.rst  entry-points.txt  pyproject.toml  setup.cfg  setup.py
nagare/admin/: kafka.py
nagare/services/: kafka.py
src/nagare/admin/: kafka.py
src/nagare/services/: kafka.py
