[metadata]
name = nagare-services-kafka
author = Net-ng
author_email = alain.poirier@net-ng.com
description = Kafka messaging service
long_description = file: README.rst
long_description_content_type = text/x-rst
license = BSD
url = https://www.nagare.org
project_urls =
    Documentation = https://nagare.org/doc
    Source = https://github.com/nagareproject/services-kafka
    Tracker = https://github.com/nagareproject/services-kafka/issues

[options]
zip_safe = False
packages = find:
install_requires =
    kafka-python
    crc32c
    nagare-server

[options.entry_points]
nagare.commands =
    kafka = nagare.admin.kafka:Commands

nagare.commands.kafka =
    receive = nagare.admin.kafka:Receive
    send = nagare.admin.kafka:Send

nagare.services =
    kafka_consumer = nagare.services.kafka:KafkaConsumer
    kafka_producer = nagare.services.kafka:KafkaProducer

[bdist_wheel]
universal = 1

[flake8]
ignore = E501
exclude =
	.git,
	.eggs,
	doc
